--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,84 +1,775 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(232, 147, 147);
-    height: 50px;
-  }
-  
-  li {
-    float: left;
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-  
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover:not(.active) {
-    background-color: rgb(232, 137, 137);
-    height: 50px;
-  }
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
-  li a:active {
-    font-weight: bold;
-  }
+/* Document
+   ========================================================================== */
 
-  #Logo {
-    height: 30px;
-  }
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
 
-  #LogoContainer {
+html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+/* Sections
+   ========================================================================== */
+
+/**
+ * Remove the margin in all browsers.
+ */
+
+body {
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   ========================================================================== */
+
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+
+code,
+kbd,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   ========================================================================== */
+
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+
+img {
+  border-style: none;
+}
+
+/* Forms
+   ========================================================================== */
+
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+
+button,
+input {
+  /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+
+button,
+select {
+  /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+
+[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+
+summary {
+  display: list-item;
+}
+
+/* Misc
+   ========================================================================== */
+
+/**
+ * Add the correct display in IE 10+.
+ */
+
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+
+[hidden] {
+  display: none;
+}
+
+/* normalize end */
+
+/* nav bar */
+.nav {
+  height: 70px;
+  width: 100%;
+  background-color: #ffb3b3;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
+.nav > .nav-header {
+  display: inline;
+}
+
+.nav > .nav-header > .nav-title {
+  display: inline-block;
+  font-size: 22px;
+  color: #fff;
+  padding: 0px 10px 0px 10px;
+}
+
+.nav > .nav-btn {
+  display: none;
+}
+
+.nav > .nav-links {
+  display: inline;
+  float: right;
+  font-size: 18px;
+}
+
+.nav > .nav-links > a {
+  display: inline-block;
+  padding: 0px 10px 0px 10px;
+  text-decoration: none;
+  color: #efefef;
+}
+
+.nav > .nav-links > a:hover {
+  background-color: #ff9b9b;
+}
+
+.nav > #nav-check {
+  display: none;
+}
+
+@media (max-width: 600px) {
+  .nav > .nav-btn {
+    display: inline-block;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+  }
+  .nav > .nav-btn > label {
+    display: inline-block;
+    width: 75px;
+    height: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    display: flex;
-    height: 50px;
-    padding: 0px;
-    padding-left: 10px;
   }
+  .nav > .nav-btn > label:hover,
+  .nav #nav-check:checked ~ .nav-btn > label {
+    background-color: #ff9b9b;
+    height: 70px;
+  }
+  .nav > .nav-btn > label > span {
+    display: block;
+    width: 25px;
+    height: 10px;
+    border-top: 2px solid #eee;
+  }
+  .nav > .nav-links {
+    position: absolute;
+    display: block;
+    width: 100%;
+    background-color: #ff9b9b;
+    height: auto;
+    transition: all 0.3s ease-in;
+    overflow-y: hidden;
+    top: 70px;
+    left: 0px;
+  }
+  .nav > .nav-links > a {
+    display: block;
+    width: 100%;
+  }
+  .nav > #nav-check:not(:checked) ~ .nav-links {
+    height: 0px;
+  }
+  .nav > #nav-check:checked ~ .nav-links {
+    /* height: calc(100vh - 50px); */
+    /* overflow-y: auto; */
+  }
+}
 
-  #LogoName {
-    padding: 10px;
-    font-size: x-large;
-  }
+.logo-box {
+  display: flex;
+  justify-content: center;
+}
 
-  .Icons {
-    height: 35px;
-    padding-right: 10px;
-  }
+#Logo {
+  height: 40px;
+  padding-top: 20px;
+}
 
-  .NavRight {
-    float: right;
-  }
+#LogoName {
+  margin-left: 10px;
+  line-height: 70px;
+  height: 70px;
+  vertical-align: middle;
+}
 
-  .LandingFlex{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row; 
-    /* justify-content: center; */
-  }
-  .FlexItem{
-    font-size: 40px;
-    font-weight: bold;
-    text-align: center;
-    color: black;
-    margin: 0px;
-    padding: 0px;
-    width: 50%;
-  }
-  @media (max-width:800px){
-    .LandingFlex{
-      flex-wrap: wrap;
-    }
+#LogoContainer {
+  text-decoration: none;
+  color: white;
+}
 
-    .FlexItem{
-      flex-basis: 50%;
-    }
+.nav-title {
+  max-height: 70px;
+  line-height: 70px;
+  white-space: nowrap;
+  display: flex;
+  align-items: center;
+}
+
+.shoppingCart {
+  height: 40px;
+  padding-right: 10px;
+  vertical-align: middle;
+  padding-left: 10px;
+}
+
+.nav-links {
+  height: auto;
+  line-height: 70px;
+  white-space: nowrap;
+  padding: 0px;
+}
+
+label {
+  line-height: 70px;
+  height: 70px;
+  vertical-align: middle;
+}
+
+/* landing page */
+#landingTopPart {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#topTitle {
+  text-align: center;
+}
+#topPic {
+  justify-content: center;
+  display: flex;
+}
+
+#bgImage {
+  height: 100vh;
+  width: 100%;
+  object-fit: cover;
+  position: relative;
+}
+
+#landingTopContent {
+  position: absolute;
+  top: 70px;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  padding-top: 300px;
+}
+
+#landingTopContent h1 {
+  font-size: 70px;
+  font-family: "Playfair Display";
+  color: #142755;
+}
+
+#landingTopContent p {
+  font-size: 20px;
+  width: 70%;
+  margin: auto;
+  text-align: center;
+  color: #142755;
+}
+
+.threeCols {
+  display: flex;
+}
+
+.threeCol {
+  flex: 1;
+  padding: 10px;
+}
+
+@media (max-width: 768px) {
+  /*breakpoint*/
+  .threeCols {
+    flex-direction: column;
   }
-  
+}
+
+.servicepic {
+  background-color: #ffb3b3;
+  border-radius: 50%;
+  padding: 50px;
+  width: 25%;
+}
+
+.centerContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.servicetext {
+  text-align: center;
+  width: 70%;
+  font-family: Calibri, Verdana, sans-serif;
+  font-weight: bold;
+  font-size: 26px;
+  color: #142755;
+}
+
+.buttonContainer {
+  justify-content: center;
+  display: flex;
+}
+
+button {
+  background-color: #d4a7fc;
+  color: white;
+  border: none;
+  padding: 15px;
+  border-radius: 10px;
+  margin: 10px;
+  width: 80px;
+}
+
+.header {
+  font-family: "Playfair Display";
+  text-align: center;
+  padding: 30px;
+  padding-top: 50px;
+  padding-bottom: 10px;
+  font-size: 50px;
+  color: #142755;
+}
+
+.reviewCard {
+  margin: 30px;
+  border-color: black;
+}
+
+.reviewPic {
+  width: 100%;
+}
+
+.reviewStars {
+  color: #ffb3b3;
+  font-size: 20px;
+}
+
+.reviewtext {
+  font-family: Calibri, Verdana, sans-serif;
+  font-size: 16px;
+}
+body {
+  padding: 0;
+  margin: 0;
+}
+.sliderContainer {
+  position: relative;
+  overflow-x: hidden;
+  height: 490px;
+}
+.sliderWidth {
+  position: absolute;
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  left: 0;
+  top: 0;
+  transition: 0.4s ease-in-out;
+}
+.overlayContainer {
+  position: relative;
+  width: 50%;
+}
+.homeShop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 450px;
+  background-color: #ffb3b3;
+  margin: 0 10px;
+  color: #fff;
+  text-align: center;
+  opacity: 1;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+}
+.middle {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.overlayContainer:hover .homeShop {
+  opacity: 1;
+}
+
+.overlayContainer:hover .middle {
+  opacity: 1;
+}
+
+.btn {
+  background: rgb(245 24 24);
+  border: none;
+  outline: none;
+  color: #fff;
+  font-size: 20px;
+  margin-top: 30px;
+  padding: 6px 12px;
+  cursor: pointer;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+}
+.btn:nth-child(2) {
+  margin-left: -74px;
+}
+.shopCard {
+  background-color: #ffb3b3;
+  border: solid 2px #ffb3b3;
+  border-radius: 20px;
+  margin: 20px;
+}
+.shopPic {
+  width: 25%;
+}
+
+.shopText {
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 20px;
+  font-family: Calibri, Verdana, sans-serif;
+}
+
+.pinkBg {
+  background-color: #ffb3b3;
+  border-radius: 20px;
+  margin: 5%;
+  margin-top: 0%;
+}
+
+#footerLogo {
+  width: 200px;
+}
+
+#footerLogoContainer {
+  background-color: #ffb3b3;
+  border-radius: 50%;
+  padding: 50px;
+}
+
+.contactInput {
+  width: 95%;
+}
+
+.inputContainer {
+  width: 90%;
+}
+
+.googleMap {
+  margin-left: 10%;
+}
+/*faqs*/
+#faqbackground {
+  width: 100%;
+}
+
+/*booking*/
+.sharpPinkBg {
+  background-color: #ffb3b3;
+  height: 100vh;
+}
+
+.whiteBg {
+  background-color: white;
+}
+
+.apptInput {
+  width: 100%;
+}
+
+.bookingCard {
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 50px;
+  border-radius: 10px;;
+  height: 720.8px
+}
+
+.apptTextInput {
+  font-size: 18px;
+}
 
