--- a/stylesheet.css
+++ b/stylesheet.css
@@ -445,9 +445,23 @@ template {
     height: 0px;
   }
   .nav > #nav-check:checked ~ .nav-links {
-    /* height: calc(100vh - 50px); */
-    /* overflow-y: auto; */
   }
+}
+
+a {
+  box-shadow: inset 0 0 0 0 #ff9b9b;
+  color: #ff9b9b;
+
+  transition: color .45s ease-in-out, box-shadow .45s ease-in-out;
+}
+a:hover {
+  color: #fff;
+  box-shadow: inset 200px 0 0 0 #ff9b9b;
+}
+
+a {
+  color: #ff9b9b;
+  text-decoration: none;
 }
 
 .logo-box {
@@ -467,7 +481,7 @@ template {
   vertical-align: middle;
 }
 
-#LogoContainer {
+.LogoContainer {
   text-decoration: none;
   color: white;
 }
@@ -517,7 +531,7 @@ label {
 }
 
 #bgImage {
-  height: 100vh;
+  height: 120vh;
   width: 100%;
   object-fit: cover;
   position: relative;
@@ -591,15 +605,32 @@ label {
 button {
   background-color: #d4a7fc;
   color: white;
-  border: none;
   padding: 15px;
-  border-radius: 10px;
   margin: 10px;
   width: 80px;
+  display:inline-block;
+  border:0.2em solid #d4a7fc;
+  border-radius:0.12em;
+  text-decoration:none;
+  text-align:center;
+  transition: all 0.2s;
 }
 
+button:hover{
+  color:white;
+  background-color:#d4a7fc;
+  border:0.2em solid #CA99D4;
+  }
+
+  @media all and (max-width:30em){
+  button{
+  display:block;
+  margin:0.4em auto;
+  }
+  }
+  
 .header {
-  font-family: "Playfair Display";
+  font-family: Calibri, Verdana, sans-serif;
   text-align: center;
   padding: 30px;
   padding-top: 50px;
@@ -623,8 +654,8 @@ button {
 }
 
 .reviewtext {
-  font-family: Calibri, Verdana, sans-serif;
   font-size: 16px;
+  font-family: Calibri, Verdana, sans-serif;
 }
 
 body {
@@ -687,7 +718,7 @@ body {
   opacity: 1;
 }
 
-.btn {
+/* .btn {
   background: rgb(245 24 24);
   border: none;
   outline: none;
@@ -699,7 +730,7 @@ body {
   position: absolute;
   left: 50%;
   transform: translate(-50%);
-}
+} */
 
 .btn:nth-child(2) {
   margin-left: -74px;
@@ -742,6 +773,11 @@ body {
 
 .contactInput {
   width: 95%;
+}
+
+.contactLabel {
+  font-family:Calibri, Verdana, sans-serif;
+  font-weight: bold;
 }
 
 .inputContainer {
@@ -789,6 +825,7 @@ margin: auto;
   background-color: white;
   display: none;
   overflow: hidden;
+  font-family: Calibri, Verdana, sans-serif;
 }
 
 .faqPage:after {
@@ -813,15 +850,59 @@ margin: auto;
   width: 100%;
 }
 
-.bookingCard {
+.card {
   padding-left: 50px;
   padding-right: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
   border-radius: 10px;;
-  height: 720.8px
+  height: 100%
 }
 
 .apptTextInput {
   font-size: 18px;
 }
 
+/* shop */
+.twoCols {
+  display: flex;
+}
+
+.twoCol {
+  flex: 1;
+  padding: 10px;
+}
+
+@media (max-width: 768px) {
+  /*breakpoint*/
+  .twoCols {
+    flex-direction: column;
+  }
+}
+
+.mainShoppic{
+  width: 100%;
+  height: 100%;
+}
+
+.shopContainer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border: none;	
+}
+
+.shopNowbtn{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #d4a7fc;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  text-align: center;
+}
