--- a/stylesheet.css
+++ b/stylesheet.css
@@ -767,7 +767,7 @@ body {
 
 .contactLabel {
   font-family:"Playfair Display";
-  font-weight: light;
+  font-weight: lighter;
 }
 
 .inputContainer {
